fix: css: global css variable name alignment with design specification (#625)

--- a/src/components/DateTimePicker/DatePicker/Styles/status.scss
+++ b/src/components/DateTimePicker/DatePicker/Styles/status.scss
@@ -3,11 +3,11 @@
 .picker {
   &-status-error {
     input {
-      @include placeholder(var(--disruptive-color-80));
+      @include placeholder(var(--disruptive-color));
     }
 
-    border-color: var(--disruptive-color-80);
-    color: var(--disruptive-color-80);
+    border-color: var(--disruptive-color);
+    color: var(--disruptive-color);
   }
 
   &-status-warning {
