--- a/src/components/PersistentBar/persistentBar.module.scss
+++ b/src/components/PersistentBar/persistentBar.module.scss
@@ -1,5 +1,5 @@
 .persistent-bar {
-  --info-color: var(--grey-color-70);
+  --info-color: var(--grey-secondary-color);
   display: flex;
   border-radius: $space-xxs;
   padding: $space-m;
