--- a/src/components/Progress/Styles/rtl.scss
+++ b/src/components/Progress/Styles/rtl.scss
@@ -5,7 +5,7 @@
     .progress-success-bg {
       border-right: unset;
       border-bottom-left-radius: 0;
-      border-left: 4px solid var(--accent-color-10);
+      border-left: 4px solid var(--accent-background1-color);
       border-top-left-radius: 0;
       left: unset;
       right: 0;
